Fri Jun 21 14:15:08 2013  Koichi Sasada  <ko1@atdot.net>

	* gc.c: fix to use total_allocated_object_num and heaps_used
	  at the GC time for profiler.

Fri Jun 21 12:35:35 2013  Koichi Sasada  <ko1@atdot.net>

	* gc.c: RGENGC_CHECK_MODE should be 0.

Fri Jun 21 11:18:25 2013  Koichi Sasada  <ko1@atdot.net>

	* gc.c (gc_marks_body): fix to get `th' in this function.

Fri Jun 21 10:21:44 2013  Koichi Sasada  <ko1@atdot.net>

	* gc.c (heaps_header/heaps_slot): embed bitmaps into heaps_slot.
	  no need to maintain allocation/free bitmaps.

Fri Jun 21 09:22:16 2013  Koichi Sasada  <ko1@atdot.net>

	* gc.c (slot_sweep_body): add counters at a time.

	* gc.c (gc_profile_dump_on): fix line break position.

Fri Jun 21 08:14:00 2013  Masaya Tarui  <tarui@ruby-lang.org>

	* gc.c: refactoring bitmaps. introduce bits_t type and some Consts.

Fri Jun 21 08:04:32 2013  Koichi Sasada  <ko1@atdot.net>

	* gc.c: fix to support USE_RGENGC == 0 (disable RGenGC).
	  If USE_RGENGC==0, it caused compilation error.

Fri Jun 21 08:08:11 2013  Masaya Tarui  <tarui@ruby-lang.org>

	* gc.c (lazy_sweep): Use is_lazy_sweeping()
	* gc.c (rest_sweep): Ditto.
	* gc.c (gc_prepare_free_objects): Ditto.

Fri Jun 21 07:34:47 2013  Koichi Sasada  <ko1@atdot.net>

	* gc.c (gc_profile_record::oldgen_objects): added.

	* gc.c (gc_profile_dump_on): print the following information:
	  * Living object counts
	  * Free object counts
	  If RGENGC_PROFILE > 0 then
	  * Oldgen object counts
	  * Remembered normal object counts
	  * Remembered shady object counts

Fri Jun 21 06:43:59 2013  Tanaka Akira  <akr@fsij.org>

	* bignum.c (rb_ull2big): Refactored.
	  (rb_uint2big): Useless code removed.

Fri Jun 21 05:37:39 2013  Koichi Sasada  <ko1@atdot.net>

	* gc.c (gc_prof_sweep_timer_stop): accumulate sweep time only when
	  record->gc_time > 0.

Fri Jun 21 00:37:31 2013  Tanaka Akira  <akr@fsij.org>

	* ext/bigdecimal: Workaround fix for bigdecimal test failures caused
	  by [ruby-dev:47413] [Feature #8509]
